поставив текст по центру завдяки Вашим підказкам

--- a/HOMEWORK/HOMEWORK-2.html
+++ b/HOMEWORK/HOMEWORK-2.html
@@ -29,6 +29,7 @@
         }
 
         h1 {
+            text-align: center;
             background: gold;
             margin: 20px;
             border: 15px solid green;
@@ -36,6 +37,7 @@
         }
 
         h3 {
+            text-align: center;
             background: cornflowerblue
         }
 
