HW-5.поставив коло по центру.

--- a/HOMEWORK/HW-5/HW-5.html
+++ b/HOMEWORK/HW-5/HW-5.html
@@ -20,52 +20,52 @@
 
     </div>
     <div class="box-2-4">
-        <div class="circle+text">
+        <div class="circle1">
             <div class="circle"></div>
             <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
         </div>
-        <div class="circle+text">
+        <div class="circle1">
             <div class="circle"></div>
             <!--            не зміг поставити коло по центру-->
             <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
         </div>
-        <div class="circle+text">
+        <div class="circle1">
             <div class="circle"></div>
             <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
         </div>
-        <div class="circle+text">
+        <div class="circle1">
             <div class="circle"></div>
             <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
         </div>
     </div>
     <div class="box-3-6">
-        <div class="rectangle+text">
+        <div class="rectangle-text">
             <div class="rectangle"></div>
             <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, eius?</p></div>
         </div>
-        <div class="rectangle+text">
+        <div class="rectangle-text">
             <div class="rectangle"></div>
             <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, eius?</p></div>
         </div>
-        <div class="rectangle+text">
+        <div class="rectangle-text">
             <div class="rectangle"></div>
             <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, eius?</p></div>
         </div>
-        <div class="rectangle+text">
+        <div class="rectangle-text">
             <div class="rectangle"></div>
             <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, eius?</p></div>
         </div>
-        <div class="rectangle+text">
+        <div class="rectangle-text">
             <div class="rectangle"></div>
             <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, eius?</p></div>
         </div>
-        <div class="rectangle+text">
+        <div class="rectangle-text">
             <div class="rectangle"></div>
             <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, eius?</p></div>
         </div>
 
     </div>
-    <div class="img+text">
+    <div class="img-text">
         <div class="img">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5qvtMTAHtIoKo8bYGHQHOR87hN11o7-08-g&usqp=CAU"
                  alt="minyons">
