--- a/HOMEWORK/CW-5/CW-5.html
+++ b/HOMEWORK/CW-5/CW-5.html
@@ -15,55 +15,57 @@
         <div class="text1"><h2>Тут буде текст</h2></div>
         <div class="text1"><h2>Тут буде текст</h2></div>
     </div>
-    <div class="two-8*2">
-        <div class="img+text">
-            <div class="img">
-                <img src="https://i1.sndcdn.com/avatars-000280390929-wqm2nb-t240x240.jpg"
-                     alt="Bart Simpson">
-            </div>
-            <div class="text"><p>Три дні та три ночі скакав Іван царевич, поки скакалку не забрали.</p></div>
-        </div><div class="img+text">
-            <div class="img">
-                <img src="https://i1.sndcdn.com/avatars-000280390929-wqm2nb-t240x240.jpg"
-                     alt="Bart Simpson">
-            </div>
-            <div class="text"><p>Три дні та три ночі скакав Іван царевич, поки скакалку не забрали.</p></div>
-        </div><div class="img+text">
+    <div class="two-8-2">
+        <div class="img-text">
             <div class="img">
                 <img src="https://i1.sndcdn.com/avatars-000280390929-wqm2nb-t240x240.jpg"
                      alt="Bart Simpson">
             </div>
             <div class="text"><p>Три дні та три ночі скакав Іван царевич, поки скакалку не забрали.</p></div>
         </div>
-        <div class="img+text">
+        <div class="img-text">
             <div class="img">
                 <img src="https://i1.sndcdn.com/avatars-000280390929-wqm2nb-t240x240.jpg"
                      alt="Bart Simpson">
             </div>
             <div class="text"><p>Три дні та три ночі скакав Іван царевич, поки скакалку не забрали.</p></div>
         </div>
-        <div class="img+text">
+        <div class="img-text">
             <div class="img">
                 <img src="https://i1.sndcdn.com/avatars-000280390929-wqm2nb-t240x240.jpg"
                      alt="Bart Simpson">
             </div>
             <div class="text"><p>Три дні та три ночі скакав Іван царевич, поки скакалку не забрали.</p></div>
         </div>
-        <div class="img+text">
+        <div class="img-text">
             <div class="img">
                 <img src="https://i1.sndcdn.com/avatars-000280390929-wqm2nb-t240x240.jpg"
                      alt="Bart Simpson">
             </div>
             <div class="text"><p>Три дні та три ночі скакав Іван царевич, поки скакалку не забрали.</p></div>
         </div>
-        <div class="img+text">
+        <div class="img-text">
             <div class="img">
                 <img src="https://i1.sndcdn.com/avatars-000280390929-wqm2nb-t240x240.jpg"
                      alt="Bart Simpson">
             </div>
             <div class="text"><p>Три дні та три ночі скакав Іван царевич, поки скакалку не забрали.</p></div>
         </div>
-        <div class="img+text">
+        <div class="img-text">
+            <div class="img">
+                <img src="https://i1.sndcdn.com/avatars-000280390929-wqm2nb-t240x240.jpg"
+                     alt="Bart Simpson">
+            </div>
+            <div class="text"><p>Три дні та три ночі скакав Іван царевич, поки скакалку не забрали.</p></div>
+        </div>
+        <div class="img-text">
+            <div class="img">
+                <img src="https://i1.sndcdn.com/avatars-000280390929-wqm2nb-t240x240.jpg"
+                     alt="Bart Simpson">
+            </div>
+            <div class="text"><p>Три дні та три ночі скакав Іван царевич, поки скакалку не забрали.</p></div>
+        </div>
+        <div class="img-text">
             <div class="img">
                 <img src="https://i1.sndcdn.com/avatars-000280390929-wqm2nb-t240x240.jpg"
                      alt="Bart Simpson">
@@ -72,41 +74,51 @@
         </div>
 
     </div>
-    <div class="three-4*2">
-        <div class="img2+text">
+    <div class="three-4-2">
+        <div class="img2-text">
             <div class="img2">
                 <img src="https://armpage.files.wordpress.com/2013/07/images.jpg" alt="minyon">
 
             </div>
-            <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
+            <div class="text3"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
         </div>
-        <div class="img2+text">
+        <div class="img2-text">
             <div class="img2">
                 <img src="https://armpage.files.wordpress.com/2013/07/images.jpg" alt="minyon">
 
             </div>
-            <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
+            <div class="text3"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
         </div>
-        <div class="img2+text">
+        <div class="img2-text">
             <div class="img2">
 
                 <img src="https://armpage.files.wordpress.com/2013/07/images.jpg" alt="minyon">
             </div>
-            <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
+            <div class="text3"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
         </div>
-        <div class="img2+text">
+        <div class="img2-text">
             <div class="img2">
                 <img src="https://armpage.files.wordpress.com/2013/07/images.jpg" alt="minyon">
 
             </div>
-            <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
+            <div class="text3"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></div>
         </div>
 
     </div>
-    <div class="four-3">
+    <div class="rectangle-3">
+        <div class="rectangle"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam doloremque eveniet
+            nemo nesciunt obcaecati omnis quis quo quod sapiente vel!</p></div>
+        <div class="rectangle"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam doloremque eveniet
+            nemo nesciunt obcaecati omnis quis quo quod sapiente vel!</p></div>
+        <div class="rectangle"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam doloremque eveniet
+            nemo nesciunt obcaecati omnis quis quo quod sapiente vel!</p></div>
 
     </div>
-    <div class="five-1*2"></div>
+    <div class="circle-1-2">
+        <div class="circle"><h3>CIRCLE</h3></div>
+        <div class="text2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci autem consequuntur hic
+            impedit necessitatibus non quas quisquam sequi. In, unde.</p></div>
+    </div>
 </div>
 </body>
 </html>
