--- a/HOMEWORK/Kältemaschinen+Bootstrap/Frigel.html
+++ b/HOMEWORK/Kältemaschinen+Bootstrap/Frigel.html
@@ -15,7 +15,7 @@
 <div class="Kältemaschinen">
 <!--    може це все треба було робити як контейнер?-->
     <div class="header">
-        <div class="LOGO"><img src="image./Logo.png" alt="Logo"></div>
+        <div class="LOGO"><img src="img./Logo.png" alt="Logo"></div>
         <button type="button" class="btn btn-secondary">Über Uns</button>
         <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
@@ -96,9 +96,9 @@
                 Prozesskühlung und Gebäudeklimatisierung eingesetzt.
             </p>
         </div>
-        <img src="image./cond*2*1.png" alt="cooler"></div>
+        <img src="img./cond*2*1.png" alt="cooler"></div>
     <div class="b-two">
-        <img src="image./cond*4*2.png" alt="cooler4*2">
+        <img src="img./cond*4*2.png" alt="cooler4*2">
         <div class="text-2">
             <h2>ENERGIEEFFIZIENZ IM FOKUS</h2>
             <p>Bei der Anschaffung sollte deshalb besonders auf energieeffiziente Systeme geachtet
@@ -124,7 +124,7 @@
                 die den aktuellsten Normen und Verordnungen entsprechen.
             </p>
         </div>
-        <img src="image./cond*7*2.png" alt="cool7*2">
+        <img src="img./cond*7*2.png" alt="cool7*2">
 
     </div>
     <div class="b-four">
@@ -136,46 +136,46 @@
                     Maximierung der Freikühlzeit erzielt größtmögliche Kosteneinsparungen</b>
                 auch bei kleinen Nennleistungen.</p>
         </div>
-        <img src="image./HotToCold.png" alt="HotCold">
+        <img src="img./HotToCold.png" alt="HotCold">
     </div>
     <div class="b-five">
         <div class="H">IHRE VORTEILE</div>
         <div class="Text-img">
-            <div class="deff">
+            <div class="deffer">
                 <div class="square">
-                    <img src="image./L-T.png" alt="lb">
-                    <img src="image./R-T.png" alt="rb">
-                    <img src="image./L-B.png" alt="lb">
-                    <img src="image./R-B.png" alt="rb">
+                    <img src="img./L-T.png" alt="lb">
+                    <img src="img./R-T.png" alt="rb">
+                    <img src="img./L-B.png" alt="lb">
+                    <img src="img./R-B.png" alt="rb">
                 </div>
                 <div class="text">Geringe Stellfläche</div>
             </div>
-            <div class="deff"><img src="image./Snow.png" alt="snow">
+            <div class="deffer"><img src="img./Snow.png" alt="snow">
                 <div class="text">Mit und ohne integrierter Freikühlung</div>
             </div>
-            <div class="deff"><img src="image./SUN.png" alt="sun">
+            <div class="deffer"><img src="img./SUN.png" alt="sun">
                 <div class="text">Für Außentemperaturen bis +55°C</div>
             </div>
-            <div class="deff">
-                <div class="home"><img src="image./Home.png" alt="home"><img src="image./Tree.png" alt="tree"></div>
+            <div class="deffer">
+                <div class="home"><img src="img./Home.png" alt="home"><img src="img./Tree.png" alt="tree"></div>
                 <div class="text">Für Außen- und Innenaufstellung erhältlich</div>
             </div>
-            <div class="deff"><img src="image./Truck.png" alt="truck">
+            <div class="deffer"><img src="img./Truck.png" alt="truck">
                 <div class="text">Betriebsbereit bei Anlieferung</div>
             </div>
-            <div class="deff"><img src="image./Bulb.png" alt="bulb">
+            <div class="deffer"><img src="img./Bulb.png" alt="bulb">
                 <div class="text">Automatische Freikühlschaltung für verringerten Energieverbrauch</div>
             </div>
-            <div class="deff"><img src="image./Dimond.png" alt="dimond">
+            <div class="deffer"><img src="img./Dimond.png" alt="dimond">
                 <div class="text">Robustes Gehäuse für Außenaufstellung</div>
             </div>
-            <div class="deff"><img src="image./Sound.png" alt="sound">
+            <div class="deffer"><img src="img./Sound.png" alt="sound">
                 <div class="text">Geringe Schallemissionen</div>
             </div>
-            <div class="deff"><img src="image./Weather.png" alt="weather">
+            <div class="deffer"><img src="img./Weather.png" alt="weather">
                 <div class="text">Wetterfest und Langlebig</div>
             </div>
-            <div class="deff"><img src="image./Protection.png" alt="protection">
+            <div class="deffer"><img src="img./Protection.png" alt="protection">
                 <div class="text">Erhöhte Betriebssicherheit</div>
             </div>
         </div>
@@ -223,11 +223,11 @@
         </div>
     </div>
     <div class="b-seven"><h3>BILDER</h3>
-        <img src="image./cond*2*2.png" alt="cond2*2"></div>
+        <img src="img./cond*2*2.png" alt="cond2*2"></div>
     <div class="b-eight">
-        <div class="curs-l"><img src="image./curs-left.png" alt="left"></div>
-        <div class="curs-r"><img src="image./curs-right.png" alt="right"></div>
-        <div class="point"><img src="image./3%20point.png" alt="3point"></div>
+        <div class="curs-l"><img src="img./curs-left.png" alt="left"></div>
+        <div class="curs-r"><img src="img./curs-right.png" alt="right"></div>
+        <div class="point"><img src="img./3%20point.png" alt="3point"></div>
     </div>
     <div class="b-nine">
         <button type="button" class="btn btn-primary">GLYKOLWANNEN</button>
